@@ -6,4 +6,4 @@ RUN addgroup -S app && adduser -S -D -H -G app app
 EXPOSE 3000
 
 USER app:app
-CMD ["java", "-Xmx128m", "-Xss512k", "-jar", "/github-trending-feed/app.jar"]
+CMD ["java", "-Xmx128m", "-Xss512k", "-XX:+CMSClassUnloadingEnabled", "-XX:+UseConcMarkSweepGC", "-jar", "/github-trending-feed/app.jar"]
